UPDATE: filename issue solved; file-size issue solved; image stretching solved by adding background;

--- a/mod/quiz/mystyles.css
+++ b/mod/quiz/mystyles.css
@@ -84,3 +84,10 @@ button:focus {
     background-color: rgb(82, 86, 89);
     border-color: rgb(82, 86, 89);
 }
+
+#loader {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    display: none;
+}
